[gd_scene load_steps=2 format=3 uid="uid://c0s1ghhdkg1y5"]

[ext_resource type="Script" uid="uid://b0m7te8rndoge" path="res://scenes/gui.gd" id="1_efmwq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_efmwq")

[node name="CameraLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "Camera
2
3"

[node name="TextureRectLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 83.0
offset_right = 76.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "TextureRectLabel"

[node name="KingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 144.0
offset_right = 81.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "KingLabel"
